# 5G_NR_project

5G_NR_test_project/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_task.md
5G_NR_test_project/artifacts/large_test_dataset/: metrics_anomalies.csv  metrics_anomalies.parquet  metrics_apps.csv  metrics_apps.parquet  metrics_overall.csv  metrics_overall.parquet  metrics_pairs.csv  metrics_pairs.parquet  metrics_summary.csv  metrics_summary.parquet  metrics_windows.csv  metrics_windows.parquet
5G_NR_test_project/artifacts/sample_parsed/: metrics_anomalies.csv  metrics_anomalies.parquet  metrics_apps.csv  metrics_apps.parquet  metrics_overall.csv  metrics_overall.parquet  metrics_pairs.csv  metrics_pairs.parquet  metrics_summary.csv  metrics_summary.parquet  metrics_windows.csv  metrics_windows.parquet
5G_NR_test_project/help_scripts/: analize_df.py  made_test_df.py
5G_NR_test_project/parsed_files/: large_test_dataset.json  sample_parsed.json
5G_NR_test_project/src/5g_nr_test_project/: cli.py
5G_NR_test_project/src/5g_nr_test_project/configs/: __init__.py  interfaces.py  models.py
5G_NR_test_project/src/5g_nr_test_project/main_scripts/: export.py  parser_definition.py  parser_factory.py  parsers.py  processor.py  test_base_parser.py
5G_NR_test_project/src/5g_nr_test_project/support_scripts/: progress_bar.py  work_with_file.py
5G_NR_test_project/src/5g_nr_test_project/test_input_data/: Test_table.csv
5G_NR_test_project/src/5g_nr_test_project/tests/: test_data.py  (+3 more)
5G_NR_test_project/tests/: sample.csv  sample_big_test.ndjson
(+1 files in other folders)
